Fix pie chart overflow. Need to tackle Bar Graph

--- a/src/assets/css/metric.css
+++ b/src/assets/css/metric.css
@@ -40,7 +40,7 @@
 }
 .pieChart {
   background-color: white;
-  height: 320px;
+  height: 400px;
   width: 280px;
   display: flex;
   justify-content: center;
